--- a/package.json
+++ b/package.json
@@ -11,10 +11,24 @@
     "@chakra-ui/react": "^1.0.0",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
+    "check-types": "^11.1.2",
+    "formik": "^2.2.9",
     "framer-motion": "^2.9.4",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "next": "latest",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-day-picker": "^7.4.10",
+    "react-dom": "^17.0.1",
+    "react-filter-search": "^1.0.11",
+    "react-icons": "^4.2.0",
+    "react-moment": "^1.1.1",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "yup": "^0.32.9"
   },
   "license": "MIT"
 }
